feat: Add Google Analytics integration and update dependencies

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next/third-parties": "^16.1.6",
     "contentlayer2": "^0.5.8",
     "lucide": "^0.563.0",
     "lucide-react": "^0.563.0",
